# shiguang-study-flow

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  domain.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backups.rs  lib.rs  main.rs  shutdown.rs  system_idle.rs  system_notifications.rs  tray.rs
src/components/: Charts.tsx  Modal.tsx  SessionList.tsx  Timer.tsx
src/lib/: backup.ts  database.ts  date.ts  demo.ts  notifications.ts  shutdown.ts  stats.ts  storage.ts  systemIdle.ts
src/views/: AnalyticsView.tsx  HistoryView.tsx  SettingsView.tsx  TodayView.tsx
